--- a/todo
+++ b/todo
@@ -1,16 +1,2 @@
-2025:07:10 ~ 2025:07:11 할 일
-
-메뉴 바에서 프로젝트 생성, 프로젝트 열기를 만든다.
-프로젝트 생성 시, 프로젝트 이름을 입력받고, 디렉토리를 지정하는 기능을 만든다.
-
-2025:07:12 ~ 2025:07:20 할 일
-Dictionary 구조를 만들기
-TreeView를 만들고, 프로젝트가 열린 경우 EMSW [프로젝트 이름]으로 설정한다.
-TreeView에서 새로 문서가 만들어진 경우, 폴더를 만든다.
-TreeView에서 문서가 삭제된 경우, 폴더를 삭제한다.
-
--> 할머니 병문안 및 외할머니 및 친할아버지 묘소 참배, 및 할아버지 기일로 인해 지연.
-
-이후 할 일
-CommandQueue를 생성하여 Memory 집중 구조를 만든다.
-입력과 데이터 출력, 연산은 모두 C언어 단으로 분리하여 Cuda를 이용해 연산하도록 한다.
+2025-09-08
+EMSW_UI에 Todo 작업 처리.
