--- a/todo
+++ b/todo
@@ -15,7 +15,8 @@ TextInput_Rendering 구현 준비 (Pyside6의 GUI를 활용할 것.)
 EMSW_UI의 텍스트 생성, 프로젝트 생성, 작업창 생성을 완성할 것 (2025-09-20 이전까지 완수 목표)
 2025-09-17
 EMSW_UI의 텍스트 생성, 프로젝트 생성 완료. -> 버그 Fixed 후, EMSW_UI의 작업창 생성으로 넘어갈 것.
-
+2025-09-18
+EMSW_UI의 텍스트 생성, 프로젝트 생성 완료, 텍스트 생성 시 TreeView 갱신 완료.
 
 (이후 목표)
 EMSW_UI에서 키보드 이벤트가 발생하면, 키보드 이벤트를 EMSW_UI의 수신 단에서 데이터를 수신.
