Original#1-2 Today do it list

--- a/todo
+++ b/todo
@@ -17,6 +17,8 @@ EMSW_UI의 텍스트 생성, 프로젝트 생성, 작업창 생성을 완성할 
 EMSW_UI의 텍스트 생성, 프로젝트 생성 완료. -> 버그 Fixed 후, EMSW_UI의 작업창 생성으로 넘어갈 것.
 2025-09-18
 EMSW_UI의 텍스트 생성, 프로젝트 생성 완료, 텍스트 생성 시 TreeView 갱신 완료.
+2025-09-19
+EMSW_UI의 작업창 생성으로 이동. 작업창은 'Double Click 시 페이지를 열도록' 작업할 것.
 
 (이후 목표)
 EMSW_UI에서 키보드 이벤트가 발생하면, 키보드 이벤트를 EMSW_UI의 수신 단에서 데이터를 수신.
