--- a/todo
+++ b/todo
@@ -19,6 +19,10 @@ EMSW_UI의 텍스트 생성, 프로젝트 생성 완료. -> 버그 Fixed 후, EM
 EMSW_UI의 텍스트 생성, 프로젝트 생성 완료, 텍스트 생성 시 TreeView 갱신 완료.
 2025-09-19
 EMSW_UI의 작업창 생성으로 이동. 작업창은 'Double Click 시 페이지를 열도록' 작업할 것.
+-> 작업 동작 및 프로그램 윈도우 창 데이터 작성 완료
+2025-09-20
+EMSW_UI의 작업 동작을 토대로 창을 띄우고, 시그널을 공유하여 작업 창을 식별하도록 만들어라.
+PySide6의 입력 감지가 아닌, pynput의 keyboard input signal을 통해 식별하도록 만들 것.
 
 (이후 목표)
 EMSW_UI에서 키보드 이벤트가 발생하면, 키보드 이벤트를 EMSW_UI의 수신 단에서 데이터를 수신.
