--- a/todo
+++ b/todo
@@ -273,3 +273,13 @@ timer : {
         active_time : content,
     }
 }
+
+
+2025-11-28
+
+첫번째 기능 목표
+
+1. AI Surpport 기능을 위한 AI Perusona 및 AI 채팅 기능 구현
+
+기능 구현에서의 목표 -> AI Perusona의 이름을 추가하고, 이름 추가를 통한 Perusona Delete 메뉴에서 확인하고 삭제
+삭제 후 똑같은 이름을 추가할 수 있는지 정보를 확인할 것.
