--- a/todo
+++ b/todo
@@ -185,7 +185,8 @@ ai_name {
             }
     }
     summary : {
-        date : summary_data
+        date : summary_data,
+        log : {}
     }
 }
 
@@ -288,3 +289,21 @@ timer : {
 
 프로젝트 생성 정비 완료,
 Character 탭 기능 완성하고, 테스트 완료를 목표로 한다.
+
+Character 기능 중 '캐릭터 불러오기' 는 Image Character 내보내기를 통해 Character를 내보낸 경우 동작하며, Character의 데이터는 .plofiles로 저장된다.
+
+편집에서 note에 들어갈 기타 정보를 삽입할 수 있다.
+여기서, 대강 정해둔 신체 정보 내지는 각종 값을 더 상세하게 정하는 역할을 하게 된다.
+또한, Note는 '통상적으로' 데이터가 리스트로 저장되지만, 
+
+
+채팅 기능
+
+-> 기존에 만들어둔 Chat UI를 외부에서 빼어 처리할 수 있는 로직을 추가.
+-> 채팅을 통해 AI의 페르소나에 Self Image 기능을 완성할 수 있음.
+-> 채팅 UI는 페이스북이나 트위터의 DM과 유사한 형태로 관리된다.
+-> 채팅을 위한 로직과 기능 로직을 분리
+-> 시간별 채팅 기록을 받아서 처리할 수 있음.
+-> 대화 기능을 통해 완성된 AI의 성향은 내부적으로 처리되며, 그 결과는 AI Profile에 남는다.
+-> 해당 기록은 log data로 ai data에 남는다.
+-> ai data 중 log data는 ai data의 로그로 접근하여 확인할 수 있으며, 블랙박스가 기본이지만, AI의 판단 준거는 기록되도록 남긴다.
