--- a/todo
+++ b/todo
@@ -345,3 +345,6 @@ set self_personality : 자기성격
 set Self Image or Set 자아 > (통상적인 자아와는 반대로, AI가 위 항목들을 통틀어서 생각한 '자신 스스로가 생각하는' 이 캐릭터의 모습을 정의한다.)
 
 help > 위 '질문'을 모두 인식할 수 있도록 커맨드의 설명을 확인한다.
+
+
+*Wiki View, Timer, 세계관 이후 작업은 오류를 처리한다고, 심각한 일정 문제가 발생하였기 때문에 기간 내에 완수하기에는 쉽지 않았음.
